# axon_a_voice_alzheimer

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
notebooks/: EDA.ipynb  feature_extraction.ipynb  model_training.ipynb
scripts/: data_processing.py  deploy.py  evaluate.py  train.py
src/: __init__.py  main.py
src/app/: api.py  streamlit_app.py
src/config/: config.yaml  logging.yaml
src/evaluation/: explainability.py  metrics.py  validate_model.py
src/models/: cnn_model.py  rnn_model.py  train_model.py
src/utils/: audio_preprocessing.py  feature_extraction.py  model_utils.py
tests/: test_audio_preprocessing.py  test_end_to_end.py  test_feature_extraction.py  test_model_training.py
