[tool.poetry]
name = "axon_a_voice_alzheimer"
version = "0.1.0"
description = "Model predykcyjny choroby Alzheimera na podstawie analizy głosu"
authors = ["Roman Turowski <twojemail@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">3.9, <3.13"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^1.0"
tensorflow = "2.16.2"
librosa = "^0.9.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
flask = "^2.0.0"
streamlit = "^1.3.0"
joblib = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
