[metadata]
name = axon_a_voice_alzheimer
version = 0.1.0
author = Roman Turowski
author_email = romanturowskidev@gmail.com
description = A deep learning project for early detection of Alzheimer's disease using voice analysis.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/romanturowskidev/axon_a_voice_alzheimer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    numpy
    pandas
    librosa
    scikit-learn
    tensorflow
    flask
    streamlit
    pyyaml
    pytest
python_requires = >=3.8, <4.0

[options.extras_require]
dev =
    black
    isort
    flake8
    mypy

[options.entry_points]
console_scripts =
    train-model = scripts.train:main
    evaluate-model = scripts.evaluate:main
    run-api = src.app.api:main

[tool:pytest]
addopts = --verbose --cov=src

[flake8]
max-line-length = 88
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[isort]
profile = black

[mypy]
ignore_missing_imports = True
